2007-04-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4368]
	* stdlib/stdlib.h: Remove obsolete part of comment for realpath.

2007-04-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4364]
	* posix/unistd.h (_XOPEN_VERSION): Define appropriately for SUSv3.

2007-04-15  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/locarchive.c (INITIAL_NUM_NAMES,
	INITIAL_SIZE_STRINGS, INITIAL_NUM_LOCREC): Update to accomodate
	current number of locales in SUPPORTED.
	(create_archive): Initialize serial.
	(enlarge_archive): Preserve aliases rather than duplicating
	their locrecs.

2007-04-13  Jakub Jelinek  <jakub@redhat.com>

	* libio/genops.c (_IO_default_finish): Call _IO_lock_fini
	after _IO_un_link, not before it.

	* stdio-common/printf_fp.c (___printf_fp): Fix exponent -4
	special case handling when wcp == wstartp + 1.  Fix a comment typo.
	* stdio-common/tfformat.c (sprint_doubles): Add a new testcase.

2007-03-30  Jakub Jelinek  <jakub@redhat.com>

	* libio/libio.h (__underflow, __uflow, __overflow, __wunderflow,
	__wuflow, __woverflow, _IO_getc, _IO_putc, _IO_peekc_locked, _IO_padn,
	_IO_sgetn, _IO_seekoff, _IO_seekpos, _IO_getwc, _IO_putwc, _IO_wpadn):
	Remove __THROW.
	* libio/fileops.c (new_do_write, _IO_file_xsgetn_mmap,
	_IO_file_xsgetn_maybe_mmap): Likewise.
	* libio/oldfileops.c (old_do_write): Likewise.
	* libio/libioP.h (_IO_switch_to_get_mode, _IO_switch_to_wget_mode,
	_IO_init_marker, _IO_init_wmarker, _IO_default_uflow,
	_IO_wdefault_uflow, _IO_default_setbuf, _IO_default_seekpos,
	_IO_do_write, _IO_new_do_write, _IO_old_do_write, _IO_wdo_write,
	_IO_flush_all_lockp, _IO_flush_all, _IO_cleanup,
	_IO_flush_all_linebuffered, _IO_new_fgetpos, _IO_old_fgetpos,
	_IO_new_fsetpos, _IO_old_fsetpos, _IO_new_fgetpos64,
	_IO_old_fgetpos64, _IO_new_fsetpos64, _IO_old_fsetpos64,
	_IO_file_setbuf, _IO_file_seekoff, _IO_file_xsputn, _IO_file_xsgetn,
	_IO_file_underflow, _IO_file_underflow_mmap,
	_IO_file_underflow_maybe_mmap, _IO_file_overflow, _IO_file_attach,