@@ -1,3 +1,7 @@
+2007-04-18  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/getaddrinfo.c: Remove commented-out code.
+
 2007-04-17  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4368]
